# ifc-lite-headless

./: .gitignore  CLAUDE.md  Cargo.toml  IFCCONVERT_COMPAT.md  README.md  TILESET_CHECKLIST.md  TILESET_SPEC.md  Taskfile.yml
.github/workflows/: ci.yml
apps/viewer/src/components/viewer/: useMouseControls.ts  useTouchControls.ts
bench/: benchmark.py  benchmark_results.csv
crates/cli/docs/: TILESET_SPEC.md
crates/cli/src/: glb.rs  main.rs  processor.rs
crates/cli/src/tileset/: reference.rs  spatial.rs  tiler.rs  types.rs
crates/core/src/: decoder.rs  error.rs  fast_parse.rs  georef.rs  legacy_entities.rs  lib.rs  model_bounds.rs  parser.rs  schema_gen.rs  units.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: bool2d.rs  csg.rs  error.rs  extrusion.rs  mesh.rs  profile.rs  profiles.rs  transform.rs  triangulation.rs  void_analysis.rs  void_index.rs
crates/geometry/src/processors/: advanced.rs  boolean.rs  brep.rs  extrusion.rs  helpers.rs  mapped.rs  surface.rs  swept.rs  tessellated.rs
crates/geometry/src/router/: caching.rs  clipping.rs  mod.rs  processing.rs  tests.rs  transforms.rs  voids.rs  voids_2d.rs
docker/: Dockerfile.ifc2glb  Dockerfile.ifcconvert  benchmark.py  benchmark_results_deflection.csv
rust/cli/: Cargo.toml
rust/cli/src/: config.rs  glb.rs  main.rs  processor.rs
rust/cli/src/tileset/: mod.rs
rust/core/: Cargo.toml
rust/geometry/src/: extrusion.rs  lib.rs  profiles.rs
rust/geometry/src/processors/: extrusion.rs  mod.rs
rust/geometry/src/router/: mod.rs
viewer/: LOD_PLAN.md  index.html  package.json  server.ts
