[workspace]
members = ["rust/core", "rust/geometry", "rust/cli"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/zahmadsaleem/ifc-lite-headless"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
strip = true
