[package]
name = "ifc-lite-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometry processing and mesh generation for IFC models"

[dependencies]
csgrs = { version = "0.20", default-features = false, features = ["earcut", "f64"] }
earcutr = "0.4"
i_overlay = "1.9"
ifc-lite-core = { path = "../core" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
rayon = "1.10"
rustc-hash = "1.1"
smallvec = "1.13"
thiserror = "1.0"
