[package]
name = "ifc-lite-headless"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Headless IFC processing toolkit"

[[bin]]
name = "ifc-lite-headless"
path = "src/main.rs"

[dependencies]
ifc-lite-core = { path = "../core" }
ifc-lite-geometry = { path = "../geometry" }
rayon = "1.10"
rustc-hash = "1.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
