[package]
name = "ifc-lite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance IFC/STEP parser for building data"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
fast-float = "0.2"
lexical-core = "1.0"
memchr = "2.7"
nom = "7.1"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "1.13"
thiserror = "1.0"

[dev-dependencies]
ifc-lite-geometry = { path = "../geometry" }
